[package]
name = "easy"
authors = ["Elie Zananiri <prisonerjohn@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.26"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.12"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
tobj = "3.0"
rayon = "1.5"
egui = "0.16"
egui-winit = "0.16"
egui_wgpu_backend = "0.16"
epi = "0.16"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
